--- a/org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
+++ b/org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
@@ -383,19 +383,21 @@ mcq-content-container .option-container.horizontal .option-block-container .opti
     background-color: white;
     border-radius: 8px;
 }
-.imagehorizontal-option-text{
-    position: relative;
-    max-width: 9%;
-    left: 7%;
-    font-weight: bold;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    max-width: 65%;
+
+.imagehorizontal-option-text {
+    height: 100%;
+    text-align: center;
 }
+
+.imagehorizontal-option-text p {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    margin: 0;
+    font-weight: bold;
+}
+
 .mcq-imagehorizontal-option-audio{
     position: absolute;
     z-index: 10;
